# RMDX_VER_Task02

./: README.md
Task_02/opencv_project/: CMakeLists.txt  README.md
Task_02/opencv_project/src/: main.cpp
